# ic-news-market

./: .env  .gitignore  Cargo.toml  README.md  canister_ids.json  deployed.did  dfx.json  lib.did  test_canister.sh
scripts/: init.sh  test.sh
src/: ic-news-market.did  lib.rs
src/declarations/ic-news-market/: ic-news-market.did  ic-news-market.did.d.ts  ic-news-market.did.js  index.d.ts  index.js
src/models/: channel.rs  language.rs  listing.rs  mod.rs
src/services/: mod.rs
src/storage/: mod.rs
src/tests/: mod.rs
