[package]
name = "ic-news-market"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"